ti-am62: secure boot related configurations
Issue: LINUXEXEC-30373

Add a ti-am62-secboot.inc that includes secure boot related
configurations.

Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/templates/default/bsp-pkgs.conf
+++ b/templates/default/bsp-pkgs.conf
@@ -9,3 +9,6 @@ BSP_EXTRAS_PACKAGES:append:ti-am62 = " \
 	ti-rpmsg-char-examples \
 	pm-utils \
 "
+
+AM62_SECBOOT_INC ?= "${@bb.utils.contains('MACHINE_FEATURES', 'secure-boot', 'conf/machine/ti-am62-secboot.inc', '', d)}"
+require ${AM62_SECBOOT_INC}
