--- a/conf/machine/ti-am62.conf
+++ b/conf/machine/ti-am62.conf
@@ -11,3 +11,8 @@ DEFAULT_DTB ?= "k3-am62a7-sk.dtb"
 OPTEEMACHINE = "k3-am62x"
 TFA_BOARD = "lite"
 
+# Add extra essential overrides
+MACHINEOVERRIDES:prepend = "${@bb.utils.contains("MACHINE_FEATURES", "secure-boot", "k3:am62axx:", "", d)}"
+
+# Enable kernel signature
+UBOOT_SIGN_ENABLE = "${@bb.utils.contains("MACHINE_FEATURES", "secure-boot", "1", "0", d)}"
