ti-am62: add TSN feature
Issue: LINUXEXEC-30927

Add TSN feature for AM62AX, and integrate related packages like
iproute2/linuxptp.

Signed-off-by: Xulin Sun <xulin.sun@windriver.com>

--- a/templates/default/bsp-pkgs.conf
+++ b/templates/default/bsp-pkgs.conf
@@ -8,6 +8,10 @@ BSP_EXTRAS_PACKAGES:append:ti-am62 = " \
 	libgpiod-tools \
 	ti-rpmsg-char-examples \
 	pm-utils \
+	iproute2-tc \
+	iproute2 \
+	linuxptp \
+	plget \
 "
 
 AM62_SECBOOT_INC ?= "${@bb.utils.contains('MACHINE_FEATURES', 'secure-boot', 'conf/machine/ti-am62-secboot.inc', '', d)}"
