ti-am62: add k3r5 machine support
Issue: LINUXEXEC-33435

To create the R5 tiboot3.bin & tispl.bin images which are required for the
AM62Ax bootloader, add the multiconfig k3r5 machine support.

Signed-off-by: Xulin Sun <xulin.sun@windriver.com>

--- a/conf/multiconfig/k3r5.conf
+++ b/conf/multiconfig/k3r5.conf
@@ -3,3 +3,5 @@ MAINMACHINE := "${MACHINE}"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${MAINMACHINE}"
 
 MACHINE:append = "-k3r5"
+
+EXCLUDE_FROM_WORLD = "1"
