--- a/conf/machine/ti-am62.conf
+++ b/conf/machine/ti-am62.conf
@@ -5,7 +5,7 @@
 require conf/machine/ti-am62.inc
 DTB_FILES = "k3-am62a7-sk.dtb k3-am62x-sk-csi2-imx219.dtbo k3-am62a7-sk-ethernet-dc01.dtbo"
 KERNEL_DEVICETREE = "${@''.join('ti/%s ' % d for d in '${DTB_FILES}'.split())}"
-IMAGE_BOOT_FILES ?= " Image u-boot.img ${DTB_FILES} uEnv.txt"
+IMAGE_BOOT_FILES ?= " Image u-boot.img ${DTB_FILES} tispl.bin tiboot3.bin uEnv.txt"
 UBOOT_MACHINE = "am62ax_evm_a53_defconfig"
 DEFAULT_DTB ?= "k3-am62a7-sk.dtb"
 OPTEEMACHINE = "k3-am62x"
