--- a/conf/machine/ti-am62.conf
+++ b/conf/machine/ti-am62.conf
@@ -10,3 +10,4 @@ UBOOT_MACHINE = "am62ax_evm_a53_defconfig"
 DEFAULT_DTB ?= "k3-am62a7-sk.dtb"
 OPTEEMACHINE = "k3-am62x"
 TFA_BOARD = "lite"
+TFA_PLATFORM = "k3"
