ti-am62: add support for LTS24
Issue: LINUXEXEC-33435

- Update bsp template to support v6.6 kernel.
- Update README & uboot to support TI SDK 10_00_00_08.
- Re-set XSERVER variable, this drops the xf86-video-modesetting which is
  introduced through the oe-core commit bfa9f21a4e4b3ce3(packagegroup-core-x11-xserver:
  add modesetting driver to default XSERVER), but it does not apply to currently EdgeAi
  function.

Signed-off-by: Xulin Sun <xulin.sun@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,7 +19,7 @@ LAYERVERSION_wr-ti-am62 = "1"
 
 LAYERDEPENDS_wr-ti-am62 = "core wrlinux meta-ti-bsp meta-edgeai"
 
-LAYERSERIES_COMPAT_wr-ti-am62 = "wrl mickledore"
+LAYERSERIES_COMPAT_wr-ti-am62 = "wrl scarthgap"
 
 WRL_RECIPES:wr-ti-am62 += " \
     tisdk-uenv \
