ti-am62: add secure boot feature
Issue: LINUXEXEC-33435

Port the secure boot feature from LTS23:
- Add a ti-am62-secboot.inc that includes secure boot related
configurations.
- Modify linux-yocto-ti-am62.inc to inherit the ti-secdev bbclass so that
security related configurations are set and security essential resource
are generated.

Signed-off-by: Xulin Sun <xulin.sun@windriver.com>

--- a/templates/default/bsp-pkgs.conf
+++ b/templates/default/bsp-pkgs.conf
@@ -14,3 +14,4 @@ BSP_EXTRAS_PACKAGES:append:ti-am62 = " \
 	plget \
 "
 
+require ${@bb.utils.contains('MACHINE_FEATURES', 'secure-boot', 'conf/machine/ti-am62-secboot.inc', '', d)}
