ti-am62.inc: Set PREFERRED_VERSION_u-boot-ti-staging for autorebase
Issue: LIN1024-6199

There are multiple versions of u-boot-ti-staging, autorebase will select the
higher version without this.

Signed-off-by: Robert Yang <liezhi.yang@windriver.com>

--- a/conf/machine/ti-am62-k3r5.conf
+++ b/conf/machine/ti-am62-k3r5.conf
@@ -12,6 +12,7 @@ require conf/machine/include/arm/armv7r/tune-cortexr5.inc
 # Select u-boot package
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-ti-staging"
 PREFERRED_PROVIDER_u-boot ?= "u-boot-ti-staging"
+PREFERRED_VERSION_u-boot-ti-staging ?= "2024.04%"
 
 SYSFW_SOC = "am62ax"
 SYSFW_CONFIG = "evm"
